--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     // You can also require other files to run in this process
     require('./renderer.js');
     const remote = require('electron').remote;
-    const port = remote.getGlobal('atradiusport');
-    window.location.href = 'http://localhost:' + port;
+    // const port = remote.getGlobal('port');
+    window.location.href = 'https://lisa.assisted-services-accp.ing.intranet/Lisa-WEB/'
   </script>
 </html>
